force-app/main/default/objects/Sales_Information_Object__c/Sales_Information_Object__c.object-meta.xml
<CustomObject>
    <label>Sales Information Object</label>
    <nameField>
        <label>Sales Information Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Information Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>