force-app/main/default/objects/Sales_Information_Object__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the customer who bought the car</description>
    <label>Buyer</label>
    <referenceTo>Customer_Information_Object__c</referenceTo>
    <relationshipLabel>Sales Information Objects</relationshipLabel>
    <relationshipName>Sales_Information_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>