force-app/main/default/objects/Sales_Information_Object__c/fields/Car_Sold__c.field-meta.xml
<CustomField>
    <fullName>Car_Sold__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the car that was sold</description>
    <label>Car Sold</label>
    <referenceTo>Car_Inventory__c</referenceTo>
    <relationshipLabel>Sales Information Objects</relationshipLabel>
    <relationshipName>Sales_Information_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>