force-app/main/default/objects/Sales_Information_Object__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <description>Price at which the car was sold</description>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>