force-app/main/default/objects/Sales_Information_Object__c/fields/salesXcustomer__c.field-meta.xml
<CustomField>
    <fullName>salesXcustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>relationship between sales information and customer information</description>
    <label>salesXcustomer</label>
    <referenceTo>Customer_Information_Object__c</referenceTo>
    <relationshipLabel>Sales Information Objects (salesXcustomer)</relationshipLabel>
    <relationshipName>Sales_Information_Objects1</relationshipName>
    <type>Lookup</type>
</CustomField>